// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "bounds": Array [
    Array [
      10,
      20,
      0,
    ],
    Array [
      10,
      10,
      0,
    ],
    Array [
      20,
      20,
      0,
    ],
  ],
  "description": "Full region description",
  "hidden": false,
  "name": "Full region",
  "pois": Array [
    Object {
      "coordinates": Array [
        10,
        12,
        0,
      ],
      "description": "pt 1 d",
      "kind": "other",
      "name": "pt 1",
    },
    Object {
      "coordinates": Array [
        33,
        34,
        0,
      ],
      "description": "pt 2 d",
      "kind": "take-out",
      "name": "pt 2",
    },
  ],
  "riversCount": 11,
  "season": "season description",
  "seasonNumeric": Array [
    1,
    2,
    3,
  ],
  "sectionsCount": 111,
}
`;

exports[`resolvers chain anon should not pass 1`] = `
Object {
  "data": Object {
    "upsertRegion": null,
  },
  "errors": Array [
    [GraphQLError: You must be logged in to do this],
  ],
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "data": Object {
    "upsertRegion": null,
  },
  "errors": Array [
    [GraphQLError: Invalid input],
  ],
}
`;

exports[`resolvers chain user should not pass 1`] = `
Object {
  "data": Object {
    "upsertRegion": null,
  },
  "errors": Array [
    [GraphQLError: You are not allowed to do this],
  ],
}
`;
